# hive

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  HitBoxManager.cpp  HitBoxManager.h  Hive.sln  Hive.vcxproj  Hive.vcxproj.filters  InGameUiManager.h  config.cfg  packages.config  readme.md  readme.txt  vcpkg-configuration.json  vcpkg.json
GameData/: bullet.xcf
GameData/Animation/: playerAnimation.json  playerAnimationData.json
GameData/AnimationData/: bossAnimationData.json  dummyAnimationData.json  enemyAnimationData.json  gameOverAnimationData.json  mookAnimationData.json  playerAnimationData.json  travelPromptAnimationData.json
GameData/EncounterData/: encounterPositions.txt
GameData/EnemyData/: encounterData.txt  enemyData.txt  positionData.txt  typeData.txt
GameData/EnemyData/Damage/: bossDamage.txt  mookDamage.txt  mookRunnerDamage.txt
GameData/EnemyData/Mook/: mookDamage.txt
GameData/HitBoxData/: bossHitBoxData.json  dummyHitBoxData.json  enemyHitBoxData.json  mookHitBoxData.json  mookRunnerHitBoxData.json  playerHitBoxData.json
GameData/PlayerData/: playerDamage.txt  playerData.txt
GameData/SpriteFonts/: goodbye_despair.spritefont  goodbye_despair_12pt.spritefont
GameData/SpriteSheetData/: bossSpriteSheetData.json  dummySpriteSheetData.json  enemySpriteSheetData.json  gameOverSpritesheetData.json  mookRunnerSpritesheetData.json  mookSpritesheetData.json  playerSpritesheetData.json  spritesheet.json  vfx.json
GameData/Tilemaps/: tm_bunker.json
Shaders/: pointLight.ps  pointLight.vs
Source/: AABB.cpp  AABB.h  AnimatedSprite.cpp  AnimatedSprite.h  Animation.h  Animator.cpp  Animator.h  AudioConstants.h  AudioEngine.cpp  AudioEngine.h  Background.cpp  Background.h  BarController.cpp  BarController.h  BeginSceneState.cpp  BeginSceneState.h  Bullet.cpp  Bullet.h  Camera.cpp  Camera.h  CharacterPortrait.cpp  CharacterPortrait.h  Collider.h  ConstantBuffers.h  Constants.h  ControlScreen.cpp  ControlScreen.h  ControlSystem.cpp  ControlSystem.h  Controls.h  D3dInputLayouts.h  DamageData.h  Dummy.cpp  Dummy.h  DummyDeadState.cpp  DummyDeadState.h  DummyEnemy.cpp  DummyEnemy.h  DummyEnemyDeadState.cpp  DummyEnemyDeadState.h  (+199 more)
assets/: assets.json
assets/data/cutscenes/: cutsceneData.json
assets/data/damage/: jungle-ape_damage.txt  life-spider_damage.txt  mook_damage.txt  player_damage.txt  waste-lobster_damage.txt
assets/data/enemies/: enemyDefinitions.json  enemy_data.txt  type_data.txt
assets/data/hitboxes/: jungle-ape_hitbox.json  lift-spider_hitbox.json  player_hitbox.json  waste-boss_hitbox.json  waste-dog_hitbox.json  waste-lobster_hitbox.json
assets/data/player/: playerDefinition.json  player_data.txt
assets/data/spritesheets/: broken-gadget_spritesheet.json  crate_spritesheet.json  dustfx_spritesheet.json  impactfx_spritesheet.json  jungle-ape_spritesheet.json  lift-spider_spritesheet.json  lobster-spit_spritesheet.json  mook_spritesheet.json  pickup_spritesheet.json  player_spritesheet.json  ui-sprites.json  waste-boss_spritesheet.json  waste-box_spritesheet.json  waste-dog_spritesheet.json  waste-lobster_spritesheet.json
assets/data/tilemaps/: tm_boss.json  tm_demo.json  tm_lift.json  tm_playground.json  tm_preview.json  tm_trailer-level-showcase.json
assets/fonts/: gameboy_28pt.spritefont  gamer_16pt.spritefont  gamer_34pt.spritefont  gamer_36pt.spritefont  thaleah_12pt.spritefont  thaleah_16pt.spritefont
assets/textures/: health-pickup.aseprite
data/: assets.json
data/EnemyData/: enemyData.txt  typeData.txt
data/HitBoxData/: bossHitBoxData.json  dummyHitBoxData.json
data/SpriteSheetData/: bossSpriteSheetData.json  travellingpromptSpritesheetData.json  vfx.json
data/encounter_data/: encounter_positions.txt
data/enemy_data/damage/: boss_damage.txt  mook_damage.txt  mook_runner_damage.txt
data/fonts/: goodbye_despair_8pt.spritefont
data/hitbox_data/: mook_hitbox_data.json
data/spritesheet_data/: player_spritesheet_data.json
src/: AABB.cpp  AABB.h  AnimatedSpriteData.h  Animation.h  AnimationData.h  AnimationEventData.h  AnimationEventManager.cpp  AnimationEventManager.h  AnimationStateData.h  Animator.cpp  Animator.h  AssetData.h  AssetLoader.cpp  AssetLoader.h  AssetType.cpp  AssetType.h  AudioConstants.h  AudioEngine.cpp  AudioEngine.h  BarController.cpp  BarController.h  BeginBossCombatEvent.cpp  BeginBossCombatEvent.h  BossEncounterController.cpp  BossEncounterController.h  Camera.cpp  Camera.h  CharacterPortrait.cpp  CharacterPortrait.h  Collider.cpp  Collider.h  CombatZone.cpp  CombatZone.h  CombatZoneManager.cpp  CombatZoneManager.h  ControlSystem.cpp  ControlSystem.h  Cutscene.h  CutsceneData.h  CutsceneManager.cpp  (+342 more)
